--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
   --color-accent-s: 70%;
   --color-accent-l: 50%;
   --color-accent: hsl(var(--color-accent-h), var(--color-accent-s), var(--color-accent-l));
-  --color-accent-lighter: hsl(var(--color-accent-h), var(--color-accent-s), 95%);
+  --color-accent-lighter: hsla(var(--color-accent-h), var(--color-accent-s), 95%);
   --color-divider: rgba(0, 0, 0, 0.12);
 
   --gradient-under-slides-size: 1rem;
@@ -409,7 +409,7 @@ body.show-outline #button-about:focus {
 
 /* #region Sliding panel (settings, about, ...) */
 
-#sliding-panel-container {
+#sliding-panels-container {
   z-index: 9;
 }
 
@@ -422,7 +422,7 @@ body.show-outline #button-about:focus {
   left: 0;
   right: 0;
   background-color: rgba(0, 0, 0, 0.4);
-  display: none;
+  /* display: none; */
 }
 
 /* TODO: animate appearing from behind the footer */
@@ -432,7 +432,40 @@ body.show-outline #button-about:focus {
   left: 0;
   right: 0;
   background-color: var(--card-background-color);
-  padding-bottom: calc(2rem + var(--footer-height));
+  padding-bottom: calc(4rem + var(--footer-height));
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+}
+
+.sliding-panel-content {
+  width: min(100%, 40rem);
+  height: 100%;
+  margin: 0 var(--body-padding);
+  padding: 1rem 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.checkbox-label {
+  position: relative;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  padding: 1rem;
+  border-radius: var(--card-border-radius);
+  cursor: pointer;
+}
+
+.checkbox-label:hover {
+  background-color: var(--swiper-navigation-background-color);
+}
+
+.checkbox-label > span {
+  margin-left: 1rem;
 }
 
 /* #endregion Sliding panel (settings, about, ...) */
