make the font-scale adjustment actually work

--- a/css/style.css
+++ b/css/style.css
@@ -453,7 +453,9 @@ footer {
 }
 
 #button-settings,
-#button-about {
+#button-about,
+#button-font-scale-plus,
+#button-font-scale-minus {
   position: relative;
   z-index: 5;
   display: flex;
