--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
   --font-size-base: 12pt;
   --font-size-multiplier: 1;
   font-size: calc(var(--font-size-base) * var(--font-size-multiplier));
-
+/* TODO: clean me up! */
   
 
   --gradient-under-slides-size: 1rem;
@@ -18,7 +18,10 @@
 
   --body-padding: 1rem;
   --card-padding: 0.5rem;
+  --narrow-screen-padding-compensation: 0rem;
   --card-border-radius: 0.25rem;
+  --sliding-sheet-border-radius: 0.5rem;
+  --sliding-sheet-item-border-radius: 0.25rem;
   --card-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),
                  0px 1px 1px 0px rgba(0, 0, 0, 0.14),
                  0px 1px 3px 0px rgba(0, 0, 0, 0.12);
@@ -34,8 +37,10 @@
 
   --color-text-black-high: hsla(0, 0%, 0%, 0.87);
   --color-text-black-medium: hsla(0, 0%, 0%, 0.6);
+  --color-icon-black: #757575; /* hsla(0, 0%, 0%, 0.54), but icons look bad with transparency */
   --color-text-white-high: hsla(0, 0%, 100%, 0.87);
   --color-text-white-medium: hsla(0, 0%, 100%, 0.6);
+  --color-icon-white: #989898; /* hsla(0, 0%, 100%, 0.54), but icons look bad with transparency */
 }
 
 /* #region Initial definitions */
@@ -45,6 +50,7 @@
   padding: 0;
   line-height: 1;
   box-sizing: border-box;
+  box-shadow: inset 0 0 0 1px red;
 }
 
 ::selection {
@@ -66,6 +72,7 @@ body {
   --color-text: var(--color-text-black-high);
   --color-secondary-text: var(--color-text-black-medium);
   --color-text-negative: var(--color-text-white-high);
+  --color-icon: var(--color-icon-black);
 
   --color-accent-s: 70%;
   --color-accent-l: 50%;
@@ -112,6 +119,7 @@ body.dark {
   --color-text: var(--color-text-white-high);
   --color-secondary-text: var(--color-text-white-medium);
   --color-text-negative: var(--color-text-black-high);
+  --color-icon: var(--color-icon-white);
 
   --color-accent-l: 70%;
   --color-destructive-l: 70%;
@@ -399,7 +407,7 @@ footer {
   position: relative;
   width: min(100%, 40rem);
   height: 100%;
-  margin: 0 var(--body-padding);
+  padding: 0 var(--body-padding);
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -503,7 +511,7 @@ footer .circular-button {
 
 #scrim.visible {
   transition-duration: var(--sheet-reveal-duration);
-  opacity: 0.32;
+  opacity: 0.58;
   pointer-events: initial;
 }
 
@@ -512,8 +520,13 @@ footer .circular-button {
   bottom: 0;
   left: 0;
   right: 0;
+  max-height: calc(100% - 5rem);
+  overflow-y: auto;
+  overscroll-behavior-y: contain;
   background-color: var(--color-card-background);
   padding-bottom: calc(4rem + var(--footer-height));
+  border-top-left-radius: var(--sliding-sheet-border-radius);
+  border-top-right-radius: var(--sliding-sheet-border-radius);
   display: flex;
   align-items: flex-start;
   justify-content: center;
@@ -537,12 +550,20 @@ footer .circular-button {
 .sliding-sheet-content {
   width: min(100%, 40rem);
   height: 100%;
-  margin: 0 var(--body-padding);
-  padding: 1rem 0;
+  margin: 0 calc(var(--body-padding) - var(--narrow-screen-padding-compensation));
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
+}
+
+.sliding-sheet-header {
+  width: 100%;
+  height: 3.5rem;
+  padding-left: 2rem;
+  display: flex;
+  align-items: center;
+  color: var(--color-secondary-text);
 }
 
 .checkbox-label {
@@ -552,9 +573,9 @@ footer .circular-button {
   align-items: center;
   flex-direction: row;
   flex-wrap: nowrap;
-  padding: 1rem;
-  border-radius: var(--card-border-radius);
+  padding: 1rem 2rem;
   cursor: pointer;
+  border-radius: var(--sliding-sheet-item-border-radius);
 }
 
 .checkbox-label:hover {
@@ -562,7 +583,7 @@ footer .circular-button {
 }
 
 .checkbox-label > span {
-  margin-left: 1rem;
+  margin-left: 1.5rem;
 }
 
 .checkbox-label input {
@@ -571,6 +592,11 @@ footer .circular-button {
   cursor: pointer;
   width: 0;
   height: 0;
+}
+
+.checkbox-icon,
+.decorative-icon {
+  color: var(--color-icon);
 }
 
 .checkbox-icon .checked {
@@ -586,7 +612,23 @@ footer .circular-button {
   display: flex;
   align-items: center;
   width: 100%;
-  padding: 1rem;
+  padding: 0 2rem;
+}
+
+#scale-control-container > span {
+  margin: 0 1.5rem;
+}
+
+.separator {
+  width: 100%;
+  height: 1px;
+  background-color: var(--color-divider);
+  border: none;
+  margin: 0.5rem 0;
+}
+
+.separator:first-of-type {
+  margin-top: 0;
 }
 
 /* #endregion Sliding panel (settings, about, ...) */
@@ -602,6 +644,8 @@ footer .circular-button {
 @media (max-width: 40em) {
   :root {
     --font-size-base: 9pt;
+    --narrow-screen-padding-compensation: var(--body-padding);
+    --sliding-sheet-item-border-radius: 0rem;
   }
 }
 
