--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@
   padding: 0;
   line-height: 1;
   box-sizing: border-box;
-  box-shadow: inset 0 0 0 1px red;
+  /* box-shadow: inset 0 0 0 1px red; */
 }
 
 ::selection {
@@ -328,7 +328,7 @@ body:not(.compact) .swiper-slide {
   display: flex;
   align-items: center;
   justify-content: center;
-  color: var(--color-accent);
+  color: var(--color-icon);
   font-weight: 500;
   pointer-events: none;
   align-self: center;
@@ -352,11 +352,12 @@ body:not(.compact) .swiper-slide {
 [class^='navigation-button-'] > span {
   text-transform: uppercase;
   font-size: 1rem;
-}
-
-[class^='navigation-button-'] > span {
   margin: 0 0.4rem;
   margin-top: 0.07rem;
+}
+
+[class^='navigation-button-'] > .icon {
+  transform: scale(1.25);
 }
 
 .navigation-button-next {
@@ -615,8 +616,12 @@ footer .circular-button {
   padding: 0 2rem;
 }
 
-#scale-control-container > span {
+#scale-control-container > span:first-of-type {
   margin: 0 1.5rem;
+}
+
+#scale-control-value {
+  margin: 0 0.25rem;
 }
 
 .separator {
