--- a/css/style.css
+++ b/css/style.css
@@ -285,7 +285,7 @@ body:not(.compact) .swiper-slide {
   display: var(--card-header-display);
   align-items: center;
   margin-left: 8px;
-  font-size: calc(16px * var(--font-size-multiplier));
+  font-size: 16px;
   word-break: break-word;
   color: var(--color-secondary-text);
   height: 32px;
